--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "chrono-node": "^1.2.5",
+    "express": "^4.14.0",
+    "moment": "^2.15.2"
   }
 }
